/ Use a ProcessBuilder (fixes parameters not being passed correctly to Python).